[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gee_s1_processing"
version = "0.1.0"
description = "S1 processing package."
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
license = { "file" = "LICENSE" }

dependencies = [
    "earthengine-api>=1.6.6",
]

[tool.flit.module]
name = "gee_s1_processing"

[project.urls]
source = "https://github.com/LSCE-forest/gee_s1_processing"
tracker = "https://github.com/LSCE-forest/gee_s1_processing/issues"